--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "~4.2.4",
     "@testing-library/react": "~9.5.0",
     "@testing-library/user-event": "~7.2.1",
+    "cuid": "~2.1.8",
+    "node-sass": "~4.13.1",
     "react": "^16.13.1",
     "react-beautiful-dnd": "~13.0.0",
     "react-dnd": "~10.0.2",
