--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "~9.5.0",
     "@testing-library/user-event": "~7.2.1",
     "cuid": "~2.1.8",
+    "lodash-es": "~4.17.15",
     "node-sass": "~4.13.1",
     "react": "^16.13.1",
     "react-beautiful-dnd": "~13.0.0",
