--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "name": "dnd-initiative-tracker",
-  "version": "0.1.0",
+  "name": "temp",
   "private": true,
-  "dependencies": {
-    "@atlaskit/css-reset": "~5.0.10",
-    "@testing-library/jest-dom": "~4.2.4",
-    "@testing-library/react": "~9.5.0",
-    "@testing-library/user-event": "~7.2.1",
-    "classnames": "~2.2.6",
-    "css-modules": "~0.3.0",
-    "cuid": "~2.1.8",
-    "lodash-es": "~4.17.15",
-    "node-sass": "~4.13.1",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "~13.0.0",
-    "react-dnd": "~10.0.2",
-    "react-dnd-html5-backend": "~10.0.2",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "styled-components": "~5.0.1"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "@types/react-beautiful-dnd": "^13.1.3",
+    "classnames": "^2.3.2",
+    "cuid": "^3.0.0",
+    "lodash-es": "^4.17.21",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
